feat: add namespace invitations
